--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@stream-io/video-react-sdk": "^1.2.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "react": "^18",
